--- a/views/pirates/new.erb
+++ b/views/pirates/new.erb
@@ -1,1 +1,14 @@
-<h1>Make your form here</h1>
+
+
+<form method="post" action="/pirates">
+<p>Pirate Name: <input id="pirate" type="text" name="pirate[name]"></p> <br>
+<p>Pirate Weight: <input id="pirate" type="text" name="pirate[weight]"></p> <br>
+<p>Pirate Height: <input id="pirate" type="text" name="pirate[height]"></p> <br>
+<p>Pirate Ship Name: <input id="ship_name_1" type="text" name="pirate[ships][][name]" ></p> <br>
+<p>Pirate Ship Type: <input id="ship_type_1" type="text" name="pirate[ships][][type]" ></p> <br>
+<p>Pirate Ship Booty: <input id="ship_booty_1" type="text" name="pirate[ships][][booty]" ></p> <br>
+<p>Pirate Ship Name: <input id="ship_name_2" type="text" name="pirate[ships][][name]" ></p> <br>
+<p>Pirate Ship Type: <input id="ship_type_2" type="text" name="pirate[ships][][type]" ></p> <br>
+<p>Pirate Ship Booty: <input id="ship_booty_2" type="text" name="pirate[ships][][booty]" ></p> <br>
+<input id="Submit" type="submit" name="submit">
+</form>
