--- a/views/pirates/show.erb
+++ b/views/pirates/show.erb
@@ -1,7 +1,14 @@
 <h1>Display your Pirate here</h1>
+  <h3>Name: <%= @pirate.name %></h3><br>
+  <h4>Weight: <%= @pirate.weight %></h4> <br>
+  <h4>Height: <%= @pirate.height %></h4> <br>
+ 
+<h1>Ships</h1>
 
-
-<h2>Display your first ship here</h2>
-
-
-<h2>Display your second ship here</h2>
+<% @ships.each do |ship| %>
+  <div class="ship">
+    <p>Name: <%= ship.name %></p><br>
+    <p>Topic: <%= ship.type %></p><br>
+    <p>Topic: <%= ship.booty %></p><br>
+  </div><br>
+<% end %>
